SF Primes/src/objects/Account_Team__c.object
<CustomObject>
    <description>A custom object designed to mimic the standard account team, where all CRED is controlled by this object.</description>
    <fields>
        <fullName>Account_Access__c</fullName>
        <label>Account Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Team</relationshipLabel>
        <relationshipName>AccountTeamAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Access__c</fullName>
        <label>Case Access</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SForce_Account_Team_Id__c</fullName>
        <label>SForce Account Team Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Roles__c</fullName>
        <description>If the Team Role field contains &quot;Forecasting&quot; then True, else False</description>
        <formula>Contains(Text (Team_Role__c),&quot;Forecasting&quot;)</formula>
        <label>Sales Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001mDRREA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Advisor - Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Services CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Services GAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Digital Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Sales Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Baseline Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - CDP ISR Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Dealix Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Digital Solutions Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Enterprise Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Inside Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - National Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - NIADA Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Retail Solutions Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Saturn Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting - Telephony Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMA Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMA Analyst2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMA Regional Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMA Strategist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National/Enterprise DSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Forecasting Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Marketing Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Marketing (DAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Marketing Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Improvement Consultant</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Team</label>
    <nameField>
        <displayFormat>Acct Member ID {0000000}</displayFormat>
        <label>Account Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>